--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,9 @@ nav > img {
   flex: 0 0 auto;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
+
 .card--image {
   width: 100%;
   margin-bottom: 9px;
@@ -90,3 +92,13 @@ nav > img {
 .card--price {
   margin-top: auto;
 }
+.card--badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
+}
+
